syntax = "proto3";

package todo;

message NewTodo {
    string task = 1;
}

message Todo {
    int64 id = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
    string task = 4;
    bool done = 5;
}

service TodoService {
    rpc AddNew(NewTodo) returns (Todo) {}
}
